Generating 'product container' HTML with JS

--- a/amazon.html
+++ b/amazon.html
@@ -55,8 +55,9 @@
     </div>
     
     <div class="main">
-      <div class="products-grid">
-        <div class="product-container">
+      <div class="products-grid js-products-grid">
+        <!-- Hiding product-container as its HTML is generated in JS -->
+        <!-- <div class="product-container">
           <div class="product-image-container">
             <img class="product-image"
               src="images/products/athletic-cotton-socks-6-pairs.jpg">
@@ -201,7 +202,7 @@
           <button class="add-to-cart-button button-primary">
             Add to Cart
           </button>
-        </div>
+        </div> -->
       </div>
     </div>
   </body>
