--- a/amazon.html
+++ b/amazon.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="styles/pages/amazon.css">
 
     <!-- Here are the JS files for this page -->
+    <script src="data/products.js" defer></script>
     <script src="scripts/amazon.js" defer></script>
   </head>
   <body>
